[gd_scene load_steps=120 format=2]

[ext_resource path="res://content/monster/bolter/Bolter.gd" type="Script" id=1]
[ext_resource path="res://content/monster/bolter/sheet.png" type="Texture" id=2]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=3]
[ext_resource path="res://content/sounds/monster/bolter/BolterDie_1.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/bolter/Bolter_Attack_04.wav" type="AudioStream" id=5]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=6]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=9]
[ext_resource path="res://content/sounds/monster/bolter/Bolter_Attack_03.wav" type="AudioStream" id=11]
[ext_resource path="res://content/monster/bolter/electricity sprite.png" type="Texture" id=12]
[ext_resource path="res://content/sounds/monster/bolter/Bolter_Attack_01.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/bolter/Bolter_Pre_.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/bolter/Bolter_Attack_02.wav" type="AudioStream" id=15]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=16]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=17]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=18]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=19]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=20]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=21]
[ext_resource path="res://content/sounds/monster/bolter/DEATH2_1.wav" type="AudioStream" id=22]
[ext_resource path="res://content/sounds/monster/bolter/DEATH2.wav" type="AudioStream" id=23]
[ext_resource path="res://content/sounds/monster/bolter/BolterDie.wav" type="AudioStream" id=24]

[sub_resource type="CircleShape2D" id=1]
radius = 27.0185

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 2 )
region = Rect2( 0, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 2 )
region = Rect2( 100, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 2 )
region = Rect2( 200, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 2 )
region = Rect2( 300, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 2 )
region = Rect2( 400, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 500, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 600, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 700, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 800, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 900, 93, 100, 93 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 2 )
region = Rect2( 0, 372, 100, 93 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 2 )
region = Rect2( 100, 372, 100, 93 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 0, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 100, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 200, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 2 )
region = Rect2( 300, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 2 )
region = Rect2( 400, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 2 )
region = Rect2( 500, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 2 )
region = Rect2( 600, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 2 )
region = Rect2( 700, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 2 )
region = Rect2( 800, 465, 100, 93 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 2 )
region = Rect2( 700, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 100, 93 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 0, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 100, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 200, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 300, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 400, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 500, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 600, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 700, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 800, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 900, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 1000, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 2 )
region = Rect2( 1100, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 2 )
region = Rect2( 1200, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 2 )
region = Rect2( 1300, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 2 )
region = Rect2( 1400, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 2 )
region = Rect2( 1500, 279, 100, 93 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 2 )
region = Rect2( 1600, 279, 100, 93 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": false,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 117 ), SubResource( 118 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
}, {
"frames": [ SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ) ],
"loop": false,
"name": "shoot2",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 12 )
region = Rect2( 0, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 12 )
region = Rect2( 159, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 12 )
region = Rect2( 318, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 12 )
region = Rect2( 477, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 12 )
region = Rect2( 636, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 12 )
region = Rect2( 795, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 12 )
region = Rect2( 954, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 12 )
region = Rect2( 1113, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 12 )
region = Rect2( 1272, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 12 )
region = Rect2( 1431, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 12 )
region = Rect2( 1590, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 12 )
region = Rect2( 1749, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 12 )
region = Rect2( 1908, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 12 )
region = Rect2( 2067, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 12 )
region = Rect2( 2226, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 12 )
region = Rect2( 2385, 149, 159, 149 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 12 )
region = Rect2( 0, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 12 )
region = Rect2( 159, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 12 )
region = Rect2( 318, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 12 )
region = Rect2( 477, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 12 )
region = Rect2( 636, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 12 )
region = Rect2( 795, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 12 )
region = Rect2( 954, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 12 )
region = Rect2( 1113, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 12 )
region = Rect2( 1272, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 12 )
region = Rect2( 1431, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 12 )
region = Rect2( 1590, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 12 )
region = Rect2( 1749, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 12 )
region = Rect2( 1908, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 12 )
region = Rect2( 2067, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 12 )
region = Rect2( 2226, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 12 )
region = Rect2( 2385, 298, 159, 149 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 159, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 12 )
region = Rect2( 318, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 12 )
region = Rect2( 477, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 12 )
region = Rect2( 636, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 12 )
region = Rect2( 795, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 12 )
region = Rect2( 954, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 12 )
region = Rect2( 1113, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 12 )
region = Rect2( 1272, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 12 )
region = Rect2( 1431, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 12 )
region = Rect2( 1590, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 12 )
region = Rect2( 1749, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 12 )
region = Rect2( 1908, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 12 )
region = Rect2( 2067, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 12 )
region = Rect2( 2226, 0, 159, 149 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 12 )
region = Rect2( 2385, 0, 159, 149 )

[sub_resource type="SpriteFrames" id=98]
animations = [ {
"frames": [  ],
"loop": false,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "bolt2",
"speed": 10.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": false,
"name": "bolt3",
"speed": 10.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": false,
"name": "bolt1",
"speed": 10.0
} ]

[node name="Bolter" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 1 )
techId = "bolter"

[node name="HitboxDefault" type="CollisionShape2D" parent="."]
position = Vector2( -5, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 6 )
position = Vector2( -7, -7.5 )
frames = SubResource( 2 )
animation = "idle"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
volume_db = -2.185
pitch_scale = 0.89
bus = "World"
script = ExtResource( 9 )
streams = [ ExtResource( 13 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 5 ) ]

[node name="ShootSound2" type="AudioStreamPlayer" parent="ShootSound"]
volume_db = -2.761
pitch_scale = 1.15
bus = "World"
script = ExtResource( 9 )
streams = [ ExtResource( 13 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 5 ) ]

[node name="DieSound" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 4 )
volume_db = -4.126
pitch_scale = 1.29
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="DieSound2" parent="DieSound" instance=ExtResource( 3 )]
volume_db = -4.126
pitch_scale = 1.29
bus = "World"
randomVolume = 1.0
randomPitch = 0.2
streams = [ ExtResource( 24 ), ExtResource( 4 ) ]

[node name="IsHitSound" type="AudioStreamPlayer" parent="."]
volume_db = -0.609
pitch_scale = 1.33
bus = "World"
script = ExtResource( 9 )
streams = [ ExtResource( 23 ), ExtResource( 22 ) ]

[node name="ChargingShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 4.311
pitch_scale = 1.33
bus = "World"
script = ExtResource( 9 )

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( -54, -38.5 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="ShotPosition" type="Position2D" parent="."]
position = Vector2( 116, 124.5 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="StunSound" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 16 )
volume_db = 1.958
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 18 ) ]

[node name="Bolt" type="AnimatedSprite" parent="."]
position = Vector2( 64, 67.5 )
frames = SubResource( 98 )
animation = "bolt3"
frame = 9

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="animation_finished" from="Bolt" to="." method="_on_Bolt_animation_finished"]
